--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "next": "12.1.6",
     "prettier": "^2.7.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "@types/react-slick": "^0.23.9",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
