--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "bs": "next build && next start"
   },
   "dependencies": {
     "@material-ui/core": "^4.12.4",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "latest",
+    "@mui/material": "latest",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.1",
     "next": "12.1.6",
