--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
     "@types/react-dom": "18.0.5",
     "@types/react-slick": "^0.23.9",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1",
     "typescript": "4.7.4"
   }
 }
