--- a/settings/navbar-settings.json
+++ b/settings/navbar-settings.json
@@ -1,7 +1,7 @@
 [
-  { "name": "Početna", "link": "" },
-  { "name": "Igrači", "link": "igraci" },
-  { "name": "O nama", "link": "o-nama" },
-  { "name": "Takmičenja", "link": "takmicenja" },
-  { "name": "Kontakt", "link": "kontakt" }
+  { "name": "Početna", "link": "/" },
+  { "name": "Igrači", "link": "/igraci" },
+  { "name": "O nama", "link": "#o-nama" },
+  { "name": "Takmičenja", "link": "#takmicenja" },
+  { "name": "Kontakt", "link": "#kontakt" }
 ]
