--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,6 @@
   "extends": ["next/core-web-vitals", "plugin:@typescript-eslint/recommended"],
   "rules": {
     "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/no-explicit-any": "error",
-    "@next/next/no-img-element": "off"
+    "@typescript-eslint/no-explicit-any": "error"
   }
 }
